fix(layout): fix layout shift on refresh and slow loading for hero component

--- a/client/src/styles/scss/variables/_variables.scss
+++ b/client/src/styles/scss/variables/_variables.scss
@@ -19,6 +19,14 @@ $foreground-overlay: linear-gradient(180deg, rgba(0, 0, 0, 0.32) 42.59%, #000000
   border-radius: $spacing-16;
   border: none;
 }
+@mixin main-btn-small {
+  padding: 9px 8px;
+  @include body-regular;
+  font-size: pxToRem(12px);
+  font-weight: bold;
+  border-radius: $spacing-16;
+  border: none;
+}
 
 @mixin reset-btn {
   border: none;
